# pypi

./: Pipfile
artea-singularity/: LICENSE  README.md  setup.cfg
artea-singularity/src/artea_singularity_gsw_ww.egg-info/: PKG-INFO  SOURCES.txt
artea-singularity/src/singularity/: README.md  admin.py  apps.py  models.py  singularity.py
artea-singularity/src/singularity/migrations/: 0001_initial.py  0002_auto_20210608_0052.py
artea-singularity/src/singularity/static/singularity/css/: master.css  singularity.css  univers_menu.css
artea-singularity/src/singularity/static/singularity/js/: arteagames.js  isInViewport.js  singularity.js
artea-singularity/src/singularity/static/singularity/sass/: colors.sass  master.sass  singularity.sass  univers.sass  univers_btn.sass  univers_colors.sass  univers_menu.sass
artea-singularity/src/singularity/static/singularity/universe_menu/js/: top_head.js
artea-singularity/src/singularity/static/singularity/universe_menu/sass/: top_head.sass
artea-singularity/src/singularity/templates/singularity/: base.html  header.html  navbar.html
