[metadata]
name = artea-singularity-gsw_ww
version = 0.7.11
author = Artea
author_email = arthur.neyer@protonmail.com
description = Singularité Artistique
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/green-kyubi/pypi/artea-singularity/
project_urls =
    Bug Tracker = https://github.com/green-kyubi/pypa/artea-singularity/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
